--- a/app/src/main/res/layout/single_list_item.xml
+++ b/app/src/main/res/layout/single_list_item.xml
@@ -1,47 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:padding="8dp"
     android:layout_marginTop="10dp"
     android:background="@drawable/ripple_transparent_background">
 
-    <TextView
-        android:id="@+id/single_list_item_image"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:text="AS"
-        android:gravity="center"
-        android:fontFamily="@font/league_spartan_regular"
-        android:textSize="30dp"
-        android:textColor="@color/WHITE"
-        android:textStyle="bold"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/single_list_item_order_number"
+        <TextView
+            android:id="@+id/single_list_item_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="AMS"
+            android:gravity="center"
+            android:fontFamily="@font/league_spartan_regular"
+            android:textSize="30dp"
+            android:textColor="@color/WHITE"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Order no: 12345"
-        android:textSize="18dp"
-        android:textColor="@color/WHITE"
-        android:textStyle="bold"
-        android:maxLines="1"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/single_list_item_image"
-        android:layout_toEndOf="@+id/single_list_item_image"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp" />
+        android:orientation="vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/single_list_item_status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Status: Pending"
-        android:textSize="12dp"
-        android:textColor="@color/WHITE"
-        android:maxLines="1"
-        android:layout_below="@+id/single_list_item_order_number"
-        android:layout_alignLeft="@+id/single_list_item_order_number"
-        android:layout_alignStart="@+id/single_list_item_order_number" />
+        <TextView
+            android:id="@+id/single_list_item_order_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Order no: 12345"
+            android:textSize="18dp"
+            android:textColor="@color/WHITE"
+            android:textStyle="bold"
+            android:layout_alignParentTop="true" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/single_list_item_status"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Status: Pending"
+            android:textSize="12dp"
+            android:textColor="@color/WHITE"
+            android:layout_below="@+id/single_list_item_order_number"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/single_list_item_status"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/single_list_item_order_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Order Date: 20-20-20"
+                android:textSize="12dp"
+                android:textColor="@color/WHITE"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/single_list_item_delivery_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Delivery Date: 20-20-20"
+                android:textSize="12dp"
+                android:textColor="@color/WHITE"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
