--- a/app/src/main/res/layout/activity_delivery_dashboard.xml
+++ b/app/src/main/res/layout/activity_delivery_dashboard.xml
@@ -19,18 +19,18 @@
         android:orientation="vertical"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:paddingBottom="10dp"
         android:layout_below="@+id/common_logo_section">
 
         <TextView
             android:id="@+id/dashboard_user_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="26dp"
             android:text="F R Summit"
             android:textColor="@color/shasroy_color"
             android:textSize="26dp"
             android:textStyle="bold"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:includeFontPadding="false"/>
 
         <TextView
             android:id="@+id/dashboard_user_email"
@@ -42,6 +42,7 @@
             android:textSize="14dp"
             android:textStyle="bold"
             android:gravity="center"
+            android:includeFontPadding="false"
             android:layout_below="@+id/dashboard_user_name"/>
 
         <TextView
@@ -53,6 +54,7 @@
             android:textSize="14dp"
             android:textStyle="bold"
             android:gravity="center"
+            android:includeFontPadding="false"
             android:layout_below="@+id/dashboard_user_email"/>
 
     </LinearLayout>
@@ -71,7 +73,7 @@
             android:id="@+id/order_top_sec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
+            android:paddingBottom="4dp"
             android:background="@drawable/bottom_border">
 
             <TextView
@@ -83,7 +85,8 @@
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_centerVertical="true"
-                android:gravity="left"/>
+                android:gravity="left"
+                android:includeFontPadding="false"/>
 
             <Button
                 android:id="@+id/dashboard_reload_btn"
@@ -96,6 +99,7 @@
                 android:textSize="16dp"
                 android:textAllCaps="false"
                 android:layout_alignParentRight="true"
+                android:includeFontPadding="false"
                 android:onClick="reloadOrderListClickHandler"/>
 
         </RelativeLayout>
@@ -106,23 +110,64 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="54dp"
+            android:includeFontPadding="false"
             android:layout_below="@+id/order_top_sec"/>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/dashboard_reset_btn"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/ripple_transparent_background"
         android:layout_marginBottom="10dp"
-        android:textColor="@android:color/white"
-        android:text="Reset My App"
-        android:textSize="18dp"
-        android:textAllCaps="false"
-        android:onClick="resetBtnClickHandler"
-        android:layout_alignParentBottom="true"/>
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/dashboard_sort_btn"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:textColor="@android:color/white"
+            android:text="Sort By Order no"
+            android:textSize="18dp"
+            android:textAllCaps="false"
+            android:background="@drawable/ripple_transparent_background"
+            android:includeFontPadding="false"
+            android:onClick="sortClickHandler"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/dashboard_reset_btn"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:textColor="@android:color/white"
+            android:text="Reset My App"
+            android:textSize="18dp"
+            android:textAllCaps="false"
+            android:background="@drawable/ripple_transparent_background"
+            android:includeFontPadding="false"
+            android:onClick="resetBtnClickHandler"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+<!--    <Button-->
+<!--        android:id="@+id/dashboard_reset_btn"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginRight="20dp"-->
+<!--        android:background="@drawable/ripple_transparent_background"-->
+<!--        android:layout_marginBottom="10dp"-->
+<!--        android:textColor="@android:color/white"-->
+<!--        android:text="Reset My App"-->
+<!--        android:textSize="18dp"-->
+<!--        android:textAllCaps="false"-->
+<!--        android:includeFontPadding="false"-->
+<!--        android:onClick="resetBtnClickHandler"-->
+<!--        android:layout_alignParentBottom="true"/>-->
 
 </RelativeLayout>
