--- a/app/src/main/res/layout/activity_delivery_dashboard.xml
+++ b/app/src/main/res/layout/activity_delivery_dashboard.xml
@@ -125,24 +125,23 @@
         android:weightSum="2"
         android:layout_alignParentBottom="true">
 
-        <Button
-            android:id="@+id/dashboard_sort_btn"
+        <Spinner
+            android:id="@+id/sort_spinner"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:textColor="@android:color/white"
-            android:text="Sort By Order no"
+            android:textColor="@color/WHITE"
             android:textSize="18dp"
             android:textAllCaps="false"
+            android:textAlignment="center"
             android:background="@drawable/ripple_transparent_background"
             android:includeFontPadding="false"
-            android:onClick="sortClickHandler"
             android:layout_weight="1"/>
 
         <Button
             android:id="@+id/dashboard_reset_btn"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:textColor="@android:color/white"
+            android:textColor="@color/WHITE"
             android:text="Reset My App"
             android:textSize="18dp"
             android:textAllCaps="false"
@@ -153,21 +152,5 @@
             android:layout_weight="1"/>
 
     </LinearLayout>
-
-<!--    <Button-->
-<!--        android:id="@+id/dashboard_reset_btn"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:layout_marginLeft="20dp"-->
-<!--        android:layout_marginRight="20dp"-->
-<!--        android:background="@drawable/ripple_transparent_background"-->
-<!--        android:layout_marginBottom="10dp"-->
-<!--        android:textColor="@android:color/white"-->
-<!--        android:text="Reset My App"-->
-<!--        android:textSize="18dp"-->
-<!--        android:textAllCaps="false"-->
-<!--        android:includeFontPadding="false"-->
-<!--        android:onClick="resetBtnClickHandler"-->
-<!--        android:layout_alignParentBottom="true"/>-->
 
 </RelativeLayout>
