--- a/app/src/main/res/drawable/et_custom.xml
+++ b/app/src/main/res/drawable/et_custom.xml
@@ -7,13 +7,19 @@
 <!--        android:endColor="#FFDFD6"-->
 <!--        android:angle="270" />-->
 
-    <gradient android:startColor="#F4F5FF"
-        android:endColor="#CCD1F9"
-        android:angle="270" />
+<!--    <gradient android:startColor="#F4F5FF"-->
+<!--        android:endColor="#CCD1F9"-->
+<!--        android:angle="270" />-->
+
+    <solid android:color="#ff683f"/>
+
+<!--    <stroke-->
+<!--        android:width="1dp"-->
+<!--        android:color="#888888" />-->
 
     <stroke
         android:width="1dp"
-        android:color="#888888" />
+        android:color="#000000" />
 
     <corners
         android:bottomLeftRadius="5dp"
