--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,6 +23,8 @@
     <color name="BLACK">#000000</color>
 
     <color name="shasroy_color">#ff683f</color>
+    <color name="INPUT_HINT_ORIGINAL_COLOR">#FFFFFF</color>
+    <color name="INPUT_HINT_COLOR">#656565</color>
 
     <color name="error_alert_background">#FFCDBD</color>
 </resources>
